# Logging

./: CMakeLists.txt  README.md
examples/: loggertest.cpp
include/: base_logger.h  console_logger.h  file_logger.h  logger_interface.h  logging_manager.h
src/: base_logger.cpp  logging_manager.cpp
